# screen-shock

./: .dockerignore  .gitignore  DEPLOY.md  README.md  RESEARCH.md  railway.json  specification.md
backend/: .env  .env.example  Dockerfile  backend.md  llm.py  main.py  pyproject.toml  requirements.txt
frontend/: .dockerignore  index.html  package.json  script.js  styles.css  tailwind.config.js
frontend/public/: index.html
frontend/src/: App.css  App.js  index.css
frontend/src/components/Button/: Button.css  Button.js
frontend/src/components/Input/: Input.css  Input.js
frontend/src/components/LoadingOverlay/: LoadingOverlay.css  LoadingOverlay.js
frontend/src/components/Modal/: Modal.css  Modal.js
frontend/src/components/ui/: Button.js  Input.js  Select.js
frontend/src/hooks/: useScreenCapture.js
frontend/src/pages/ConfigPage/: ConfigList.css  ConfigList.js  ConfigPage.css  ConfigPage.js
frontend/src/pages/DescriptionPage/: DescriptionPage.css  DescriptionPage.js
frontend/src/pages/MonitoringPage/: MonitoringPage.css  MonitoringPage.js
frontend/src/services/: api.js  mockApi.js
mcp/: package-lock.json  package.json  server.js
mcp/routes/: mcp.mjs
mcp/services/: pavlok.mjs
