[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.115.13",
    "litellm>=1.73.0",
    "logger>=1.4",
    "loguru>=0.7.3",
    "pydantic>=2.11.7",
    "uvicorn>=0.34.3",
]
